# modbot

./: .gitignore  LICENSE  README.md  config_defaults.json  pyproject.toml  tox.ini
bot/: __main__.py
bot/exts/: admin.py  error_handler.py  mail.py  moderation.py
